Test using a secret. Run weekly on Monday 9am PST. Run action upon push too.

--- a/.github/workflows/run-on-schedule.yml
+++ b/.github/workflows/run-on-schedule.yml
@@ -5,8 +5,9 @@ name: Play with Scheduling Github Actions
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
 on:
+  push:
   schedule:
-    - cron: "*/5 * * * *"
+    - cron: "0 16 * * 1"
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -19,3 +20,5 @@ jobs:
         with:
           node-version: '12.x'
       - run: npm start
+        env:
+          SECRET_TEST_MESSAGE: ${{ secrets.SECRET_TEST_MESSAGE }}
