--- a/.github/workflows/run-on-schedule.yml
+++ b/.github/workflows/run-on-schedule.yml
@@ -1,6 +1,5 @@
-# This is a basic workflow to help you get started with Actions
-
-name: Play with Scheduling Github Actions
+name: Run script weekly
+description: Run Node.js script on a schedule.
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
@@ -19,6 +18,7 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: '12.x'
+      - run: npm install
       - run: npm start
         env:
           SECRET_TEST_MESSAGE: ${{ secrets.SECRET_TEST_MESSAGE }}
