--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "url": "https://github.com/briangershon/github-actions-cron/issues"
   },
   "homepage": "https://github.com/briangershon/github-actions-cron#readme",
-  "dependencies": {
-    "axios": "^0.20.0"
+  "dependencies": {},
+  "devDependencies": {
+    "axios": "^0.21.1"
   }
 }
